istioctl/cmd/istioctl/testdata/v1alpha3/merged-gateway.yaml.golden
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  creationTimestamp: null
  name: wild-simple-ingress-istio-autogenerated-k8s-ingress
  namespace: default
spec:
  gateways:
  - istio-autogenerated-k8s-ingress
  hosts:
  - '*'
  http:
  - match:
    - uri:
        prefix: /foo/
    route:
    - destination:
        host: myservice-service.default.svc.cluster.local
        port:
          number: 9080
      weight: 100
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: my-ui.default.svc.cluster.local
        port:
          number: 80
      weight: 100
  - match:
    - uri:
        exact: /foo/bar/
    route:
    - destination:
        host: anotherservice-service.another-namespace.svc.cluster.local
        port:
          number: 7080
      weight: 100
