istioctl/cmd/istioctl/testdata/v1alpha3/myservice-gateway.yaml.golden
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  creationTimestamp: null
  name: istio-autogenerated-k8s-ingress
  namespace: default
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - '*'
    port:
      name: http-80-ingress-simple-ingress-default
      number: 80
      protocol: HTTP
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  creationTimestamp: null
  name: simple-ingress-istio-autogenerated-k8s-ingress
  namespace: default
spec:
  gateways:
  - istio-autogenerated-k8s-ingress
  hosts:
  - '*'
  http:
  - match:
    - uri:
        prefix: /foo/
    route:
    - destination:
        host: myservice-service.default.svc.cluster.local
        port:
          number: 9080
      weight: 100
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: my-ui.default.svc.cluster.local
        port:
          number: 80
      weight: 100
